--- a/src/main/resources/templates/chordCreate.html
+++ b/src/main/resources/templates/chordCreate.html
@@ -6,8 +6,10 @@
             <div class="text-zinc-500">Chordric에 기타 코드를 직접 등록하고, 다른 사람들과 공유해보세요</div>
         </div>
 
+        <form method="post" th:object="${chordCreateForm}" class="space-y-10">
+            <!--th:action 속성을 삭제 후 CSRF 값 설정-->
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 
-        <form th:action="@{/chord/create}" method="post" th:object="${chordCreateForm}" class="space-y-10">
             <div class="space-y-3">
                 <label class="input input-bordered flex items-center gap-2">
                     Artist
